Add build system for HTML generation from YAML
- Add scripts/build-html.js to generate index.html from template
- Add frontend/index.template.html with placeholders
- Store Stripe URL and crypto addresses in data/crypto.yaml
- Add js-yaml dependency
- Update Makefile with build-html step

Closes #5

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "LeakIX sponsor/donation page",
   "private": true,
   "devDependencies": {
+    "js-yaml": "^4.1.0",
     "prettier": "^3.7.4",
     "sass": "^1.97.1"
   }
